Habit detail + toggle, streaks, and templates working

--- a/habits/templates/habits/home.html
+++ b/habits/templates/habits/home.html
@@ -1,16 +1,15 @@
-<!doctype html>
-<html>
-<head>
-  <title>Habit Tracker</title>
-</head>
-<body>
-  <h1>Habit Tracker</h1>
-  <ul>
-    {% for habit in habits %}
-      <li>{{ habit.name }} ({{ habit.habit_type }} / {{ habit.strategy }})</li>
-    {% empty %}
-      <li>No habits yet!</li>
-    {% endfor %}
-  </ul>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<h1>Habits</h1>
+<ul>
+  {% for h in habits %}
+    <li>
+      <a href="{% url 'habits:habit_detail' h.pk %}">{{ h.name }}</a>
+      <span class="pill">{{ h.get_habit_type_display }}</span>
+      <span class="pill">{{ h.get_strategy_display }}</span>
+    </li>
+  {% empty %}
+    <li>No habits yet. Add some in the admin panel.</li>
+  {% endfor %}
+</ul>
+{% endblock %}
